Change bg on purple

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Пример веб-страницы</title>
+  <title>Леха фил </title>
+  <link href="css.css" rel="stylesheet">
  </head>
  <body>
-  <h1>Заголовок</h1>
+  <h1>Окорочок</h1>
   <p>Первый абзац.</p>
   <p>Второй абзац.</p>
  </body>
