добавил новый шрифт

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Леха фил </title>
   <link href="css.css" rel="stylesheet">
+  <link rel='stylesheet' type="text/css" href="https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900">
+  
  </head>
  <body>
   <h1>Окорочок</h1>
